# rust-ecs-todomvc

./: Cargo.toml  README.md
crates/app/: Cargo.toml
crates/app/src/: main.rs  utils.rs
crates/app/src/components/: app.rs  mod.rs
crates/app/src/styles/: global.css
crates/core/: Cargo.toml
crates/core/src/: command.rs  ecs.rs  lib.rs
crates/core/src/command/: ecs.rs  mod.rs  ui.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: components.rs  main.rs  state.rs  util.rs
crates/desktop/src/components/: app.rs  header.rs
crates/desktop/src/styles/: global.css
